--- a/Lesson4/index.html
+++ b/Lesson4/index.html
@@ -1,97 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>New York</title>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>New York</title>
     <link rel="stylesheet" href="style.css">
     <div id="bannerimage">
-    <header>
-      <h1>New<span><span>York</span>City</span></h1>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="booking.html">About Us</a></li>
-
-        </ul>
-      </nav>
-    </header>
-</div>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Pricing</a>
-        <a class="nav-link disabled">Disabled</a>
-      </div>
+        <header>
+            <h1>New<span><span>York</span>City</span></h1>
+        </header>
     </div>
-  </div>
-</nav>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="booking.html">About Us</a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
 
+    <h1>New York,info and places to visit</h1>
+    <style>
 
-<h1>New York,info and places to visit</h1>
-  <style>
 
-
-  </style>
+    </style>
 </head>
 <body style="background-color:cornsilk;">
 
-  <div align = "center">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/WLSnrXEtrT4" title="YouTube video player" frameborder="0" allow="accelerometer;
+<div align="center">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/WLSnrXEtrT4" title="YouTube video player"
+            frameborder="0" allow="accelerometer;
    autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-   allowfullscreen></iframe>
+            allowfullscreen></iframe>
 </div>
 <div>
-  <p style="border-radius: 10px; background-color:orange; font-size: 20px; padding: 10px;">
-        New York, often called New York City to distinguish it from New York State, or NYC for short, is the most populous city in the United States.
-        With a 2020 population of 8,804,190 distributed over 300.46 square miles (778.2 km2),[2] New York City is also the most densely populated major city in the United States.
-        Located at the southern tip of the State of New York, the city is the center of the New York metropolitan area, the largest metropolitan area in the world by urban area.
-        [9] With over 20 million people in its metropolitan statistical area and approximately 23 million in its combined statistical area, it is one of the world's most populous megacities.
-        New York City has been described as the cultural, financial, and media capital of the world, significantly influencing commerce,[10] entertainment, research, technology, education, politics, tourism, art, fashion, and sports,
+    <p style="border-radius: 10px; background-color:orange; font-size: 20px; padding: 10px;">
+        New York, often called New York City to distinguish it from New York State, or NYC for short, is the most
+        populous city in the United States.
+        With a 2020 population of 8,804,190 distributed over 300.46 square miles (778.2 km2),[2] New York City is also
+        the most densely populated major city in the United States.
+        Located at the southern tip of the State of New York, the city is the center of the New York metropolitan area,
+        the largest metropolitan area in the world by urban area.
+        [9] With over 20 million people in its metropolitan statistical area and approximately 23 million in its
+        combined statistical area, it is one of the world's most populous megacities.
+        New York City has been described as the cultural, financial, and media capital of the world, significantly
+        influencing commerce,[10] entertainment, research, technology, education, politics, tourism, art, fashion, and
+        sports,
         and is the most photographed city in the world.
-        [11] Home to the headquarters of the United Nations,[12] New York is an important center for international diplomacy,[13][14] and has sometimes been called the capital of the world.[15][16]
-  </p>
-      <div id="wrapper" style="width:100%; text-align:center">
-      <img src="new-york-above.jpg">
-      <img src="new-york-taxi.jpg">
-      <img src="statue-of-liberty.jpg">
-  <p style="border-radius: 10px; background-color:orange; font-size: 20px;padding: 10px;">
-        Situated on one of the world's largest natural harbors, New York City is composed of five boroughs, each of which is coextensive with a respective county of the State of New York.
-        The five boroughs—Brooklyn (Kings County), Queens (Queens County), Manhattan (New York County), the Bronx (Bronx County), and Staten Island (Richmond County)—were created when local governments were consolidated into a single municipal entity in 1898.
-        [17] The city and its metropolitan area constitute the premier gateway for legal immigration to the United States. As many as 800 languages are spoken in New York,[18] making it the most linguistically diverse city in the world.
-        New York is home to more than 3.2 million residents born outside the United States,[19] the largest foreign-born population of any city in the world as of 2016.
-        [20][21] As of 2019, the New York metropolitan area is estimated to produce a gross metropolitan product (GMP) of $2.0 trillion. If the New York metropolitan area were a sovereign state, it would have the eighth-largest economy in the world.
-        New York is home to the highest number of billionaires of any city in the world.[22]
-  </p>
-  </div>
-  </div>
-
-  <div id="mainhead"><h1>Booking Form<br>Book now, pay later</h1>
-        <br>
-      <form align = "center" >
-            <label for="fname">First Name:</label><br>
-            <input type="text" id="fname" name="fname" autofocus placeholder="Enter your first name"><br>
-            <label for="1name">Last Name:</label><br>
-            <input type="text" id="1name" name="1name" placeholder="Enter your second name"><br>
-            <label for="fromDate" min="2021-11-02" max="2202-02-07" >First Date Of Travel From London:</label><br>
-            <input type="date" id="FromDate" name="FromDate"><br>
-            <label for="toDate">Last date of Travel From New York:</label><br>
-            <input type="date" id="todate" name="toDate"><br>
-            <label for="npass">Number of traveller(s):</label><br>
-            <input type="number" id="npass" name="npass" value="1" ><br>
-            <br>
-            <input type="submit" value="Confirm Order">
+        [11] Home to the headquarters of the United Nations,[12] New York is an important center for international
+        diplomacy,[13][14] and has sometimes been called the capital of the world.[15][16]
+    </p>
+    <div id="wrapper" style="width:100%; text-align:center">
+        <img src="new-york-above.jpg">
+        <img src="new-york-taxi.jpg">
+        <img src="statue-of-liberty.jpg">
+        <p style="border-radius: 10px; background-color:orange; font-size: 20px;padding: 10px;">
+            Situated on one of the world's largest natural harbors, New York City is composed of five boroughs, each of
+            which is coextensive with a respective county of the State of New York.
+            The five boroughs—Brooklyn (Kings County), Queens (Queens County), Manhattan (New York County), the Bronx
+            (Bronx County), and Staten Island (Richmond County)—were created when local governments were consolidated
+            into a single municipal entity in 1898.
+            [17] The city and its metropolitan area constitute the premier gateway for legal immigration to the United
+            States. As many as 800 languages are spoken in New York,[18] making it the most linguistically diverse city
+            in the world.
+            New York is home to more than 3.2 million residents born outside the United States,[19] the largest
+            foreign-born population of any city in the world as of 2016.
+            [20][21] As of 2019, the New York metropolitan area is estimated to produce a gross metropolitan product
+            (GMP) of $2.0 trillion. If the New York metropolitan area were a sovereign state, it would have the
+            eighth-largest economy in the world.
+            New York is home to the highest number of billionaires of any city in the world.[22]
+        </p>
+    </div>
 </div>
-     </form>
+
+<div id="mainhead">
+    <h1>Booking Form<br>Book now, pay later</h1>
+    <br>
+    <form align="center">
+        <label for="fname">First Name:</label><br>
+        <input type="text" id="fname" name="fname" autofocus placeholder="Enter your first name"><br>
+        <label for="1name">Last Name:</label><br>
+        <input type="text" id="1name" name="1name" placeholder="Enter your second name"><br>
+        <label for="fromDate" min="2021-11-02" max="2202-02-07">First Date Of Travel From London:</label><br>
+        <input type="date" id="FromDate" name="FromDate"><br>
+        <label for="toDate">Last date of Travel From New York:</label><br>
+        <input type="date" id="todate" name="toDate"><br>
+        <label for="npass">Number of traveller(s):</label><br>
+        <input type="number" id="npass" name="npass" value="1"><br>
+        <br>
+        <input type="submit" value="Confirm Order">
+    </form>
+</div>
 </body>
 </html>
