--- a/Lesson4/index.html
+++ b/Lesson4/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New York</title>
     <link rel="stylesheet" href="style.css">
-    <div id="bannerimage">
-        <header>
-            <h1>New<span><span>York</span>City</span></h1>
-        </header>
+    <div id="banner-image">
+        <div id="new-york-div">
+            <header>
+                <h1 id="centre-new-york">New<span><span>York</span>City</span></h1>
+            </header>
+        </div>
     </div>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -17,7 +19,7 @@
             <a class="navbar-brand" href="#">Navbar</a>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     <a class="nav-link active" aria-current="page" href="booking.html">About Us</a>
                 </div>
             </div>
