added nav in lesson 8 and css

--- a/Lesson4/index.html
+++ b/Lesson4/index.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#"></a>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
@@ -42,7 +42,7 @@
             allowfullscreen></iframe>
 </div>
 <div>
-    <p style="border-radius: 10px; background-color:orange; font-size: 20px; padding: 10px;">
+    <p style="border-radius: 10px; background-color:orange; font-size: 20px; padding: 30px;">
         New York, often called New York City to distinguish it from New York State, or NYC for short, is the most
         populous city in the United States.
         With a 2020 population of 8,804,190 distributed over 300.46 square miles (778.2 km2),[2] New York City is also
@@ -59,10 +59,10 @@
         diplomacy,[13][14] and has sometimes been called the capital of the world.[15][16]
     </p>
     <div id="wrapper" style="width:100%; text-align:center">
-        <img src="new-york-above.jpg">
-        <img src="new-york-taxi.jpg">
-        <img src="statue-of-liberty.jpg">
-        <p style="border-radius: 10px; background-color:orange; font-size: 20px;padding: 10px;">
+        <img src="new-york-above.jpg" alt="new-york-skyline">
+        <img src="new-york-taxi.jpg" alt="taxi">
+        <img src="statue-of-liberty.jpg" alt="statue-of-liberty">
+        <p>
             Situated on one of the world's largest natural harbors, New York City is composed of five boroughs, each of
             which is coextensive with a respective county of the State of New York.
             The five boroughs—Brooklyn (Kings County), Queens (Queens County), Manhattan (New York County), the Bronx
