--- a/Lesson4/booking.html
+++ b/Lesson4/booking.html
@@ -28,7 +28,7 @@
 
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#"></a>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
@@ -57,8 +57,6 @@
     <input type="number" id="npass" name="npass" value="1"><br>
     <br>
     <input type="submit" value="Confirm Order">
-
-
 </form>
 
 </body>
