added footer to home page and about us page not rendering properly

--- a/Lesson4/index.html
+++ b/Lesson4/index.html
@@ -100,4 +100,33 @@
     </form>
 </div>
 </body>
+<div class="footer-container">
+    <div class="footer">
+      <div class="footer-heading-footer-1">
+        <h2>About Us</h2>
+        <a href="#">bookings</a>
+        <a href="#">Customer</a>
+        <a href="#">Investers</a>
+        <a href="#">blog</a>
+      </div>
+      <div class="footer-heading-footer-2">
+        <h2>Contact Us</h2>
+        <a href="#">Jobs</a>
+        <a href="#">Support</a>
+        <a href="#">Contact</a>
+      </div>
+      <div class="footer-heading-footer-3">
+        <h2>Social Media</h2>
+        <a href="#">Instagram</a>
+        <a href="#">Facebook</a>
+        <a href="#">Youtube</a>
+      </div>
+      <div class="footer-email-form">
+        <h2>Join our newsletter</h2>
+        <input type="email" placeholder="Enter your email address" id="footer-email">
+        <input type="submit" value="Sign Up"
+        id="footer-email-btn">
+      </div>
+    </div>
+  </div>
 </html>
