added title to paragraph sections

--- a/Lesson4/index.html
+++ b/Lesson4/index.html
@@ -27,7 +27,7 @@
     </nav>
 
 
-    <h1>New York,info and places to visit</h1>
+    <h2>Check out our video for the Top 10 things to in New York City</h2>
     <style>
 
 
@@ -42,6 +42,7 @@
             allowfullscreen></iframe>
 </div>
 <div>
+  <h1>New York Facts</h1>
     <p style="border-radius: 10px; background-color:orange; font-size: 20px; padding: 30px;">
         New York, often called New York City to distinguish it from New York State, or NYC for short, is the most
         populous city in the United States.
@@ -62,6 +63,7 @@
         <img src="new-york-above.jpg" alt="new-york-skyline">
         <img src="new-york-taxi.jpg" alt="taxi">
         <img src="statue-of-liberty.jpg" alt="statue-of-liberty">
+        <h1>New York Facts</h1>
         <p>
             Situated on one of the world's largest natural harbors, New York City is composed of five boroughs, each of
             which is coextensive with a respective county of the State of New York.
