added solid border to nav bar

--- a/Lesson4/index.html
+++ b/Lesson4/index.html
@@ -27,7 +27,7 @@
     </nav>
 
 
-    <h2>Check out our video for the Top 10 things to in New York City</h2>
+    <h2 class="title">Check out our video for the Top 10 things to in New York City</h2>
     <style>
 
 
@@ -38,12 +38,12 @@
 <div align="center">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/WLSnrXEtrT4" title="YouTube video player"
             frameborder="0" allow="accelerometer;
-   autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
 </div>
 <div>
   <h1>New York Facts</h1>
-    <p style="border-radius: 10px; background-color:orange; font-size: 20px; padding: 30px;">
+    <p id="first-paragraph">
         New York, often called New York City to distinguish it from New York State, or NYC for short, is the most
         populous city in the United States.
         With a 2020 population of 8,804,190 distributed over 300.46 square miles (778.2 km2),[2] New York City is also
@@ -64,7 +64,7 @@
         <img src="new-york-taxi.jpg" alt="taxi">
         <img src="statue-of-liberty.jpg" alt="statue-of-liberty">
         <h1>New York Facts</h1>
-        <p>
+        <p id="second-paragraph">
             Situated on one of the world's largest natural harbors, New York City is composed of five boroughs, each of
             which is coextensive with a respective county of the State of New York.
             The five boroughs—Brooklyn (Kings County), Queens (Queens County), Manhattan (New York County), the Bronx
